@@ -16,50 +16,53 @@
 
 package android.healthconnect.cts.device;
 
+import static android.health.connect.datatypes.ExerciseSegmentType.EXERCISE_SEGMENT_TYPE_PAUSE;
 import static android.health.connect.datatypes.ExerciseSessionRecord.EXERCISE_DURATION_TOTAL;
+import static android.health.connect.datatypes.ExerciseSessionType.EXERCISE_SESSION_TYPE_RUNNING;
 import static android.health.connect.datatypes.StepsRecord.STEPS_COUNT_TOTAL;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.CHANGE_LOGS_RESPONSE;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.CHANGE_LOG_TOKEN;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.READ_RECORDS_SIZE;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.RECORD_IDS;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.SUCCESS;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.deleteRecordsAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.getChangeLogTokenAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.getDataOriginPriorityOrder;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.insertExerciseSessionAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.insertRecordAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.insertRecordWithAnotherAppPackageName;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.insertRecordWithGivenClientId;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.insertStepsRecordAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.readChangeLogsUsingDataOriginFiltersAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.readRecordsAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.readRecordsUsingDataOriginFiltersAs;
-import static android.healthconnect.cts.lib.MultiAppTestUtils.updateRecordsAs;
+import static android.healthconnect.cts.utils.DataFactory.buildExerciseSessionWithEmptyMetadata;
+import static android.healthconnect.cts.utils.DataFactory.buildSleepSessionWithEmptyMetadata;
+import static android.healthconnect.cts.utils.DataFactory.getDataOrigin;
+import static android.healthconnect.cts.utils.DataFactory.getDataOrigins;
+import static android.healthconnect.cts.utils.DataFactory.getDistanceRecordWithEmptyMetadata;
+import static android.healthconnect.cts.utils.DataFactory.getEmptyMetadata;
+import static android.healthconnect.cts.utils.DataFactory.getHeartRateRecordWithEmptyMetadata;
+import static android.healthconnect.cts.utils.DataFactory.getMetadata;
+import static android.healthconnect.cts.utils.DataFactory.getMetadataForClientId;
+import static android.healthconnect.cts.utils.DataFactory.getMetadataForId;
+import static android.healthconnect.cts.utils.DataFactory.getStepsRecordWithEmptyMetaData;
+import static android.healthconnect.cts.utils.DataFactory.getTotalCaloriesBurnedRecordWithEmptyMetadata;
+import static android.healthconnect.cts.utils.PermissionHelper.getGrantedHealthPermissions;
+import static android.healthconnect.cts.utils.PermissionHelper.grantPermission;
+import static android.healthconnect.cts.utils.PermissionHelper.revokeAndThenGrantHealthPermissions;
+import static android.healthconnect.cts.utils.PermissionHelper.revokeHealthPermissions;
+import static android.healthconnect.cts.utils.PermissionHelper.revokePermission;
+import static android.healthconnect.cts.utils.TestUtils.createReadRecordsRequestUsingFilters;
 import static android.healthconnect.cts.utils.TestUtils.deleteAllStagedRemoteData;
 import static android.healthconnect.cts.utils.TestUtils.deleteTestData;
 import static android.healthconnect.cts.utils.TestUtils.fetchDataOriginsPriorityOrder;
 import static android.healthconnect.cts.utils.TestUtils.getAggregateResponse;
 import static android.healthconnect.cts.utils.TestUtils.getApplicationInfo;
-import static android.healthconnect.cts.utils.TestUtils.getGrantedHealthPermissions;
-import static android.healthconnect.cts.utils.TestUtils.getInstantTime;
-import static android.healthconnect.cts.utils.TestUtils.grantPermission;
+import static android.healthconnect.cts.utils.TestUtils.getRecordIdFilters;
+import static android.healthconnect.cts.utils.TestUtils.getRecordIds;
 import static android.healthconnect.cts.utils.TestUtils.insertRecordsForPriority;
 import static android.healthconnect.cts.utils.TestUtils.readRecords;
-import static android.healthconnect.cts.utils.TestUtils.revokeAndThenGrantHealthPermissions;
-import static android.healthconnect.cts.utils.TestUtils.revokeHealthPermissions;
-import static android.healthconnect.cts.utils.TestUtils.revokePermission;
 import static android.healthconnect.cts.utils.TestUtils.updateDataOriginPriorityOrder;
 import static android.healthconnect.cts.utils.TestUtils.verifyDeleteRecords;
+import static android.healthconnect.cts.utils.TestUtils.yesterdayAt;
 
-import static com.android.compatibility.common.util.FeatureUtil.AUTOMOTIVE_FEATURE;
-import static com.android.compatibility.common.util.FeatureUtil.hasSystemFeature;
+import static com.android.compatibility.common.util.SystemUtil.eventually;
 
 import static com.google.common.truth.Truth.assertThat;
 
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.fail;
+
+import static java.time.Duration.ofMinutes;
 
 import android.app.UiAutomation;
 import android.content.Context;
+import android.content.pm.PackageManager;
 import android.health.connect.AggregateRecordsRequest;
 import android.health.connect.AggregateRecordsResponse;
 import android.health.connect.HealthConnectException;
@@ -70,78 +73,77 @@ import android.health.connect.ReadRecordsRequestUsingIds;
 import android.health.connect.RecordIdFilter;
 import android.health.connect.TimeInstantRangeFilter;
 import android.health.connect.UpdateDataOriginPriorityOrderRequest;
+import android.health.connect.changelog.ChangeLogTokenRequest;
+import android.health.connect.changelog.ChangeLogsRequest;
 import android.health.connect.changelog.ChangeLogsResponse;
 import android.health.connect.datatypes.AggregationType;
+import android.health.connect.datatypes.AppInfo;
+import android.health.connect.datatypes.BasalMetabolicRateRecord;
 import android.health.connect.datatypes.DataOrigin;
+import android.health.connect.datatypes.DistanceRecord;
+import android.health.connect.datatypes.ExerciseSegment;
 import android.health.connect.datatypes.ExerciseSessionRecord;
 import android.health.connect.datatypes.HeartRateRecord;
 import android.health.connect.datatypes.Metadata;
 import android.health.connect.datatypes.Record;
+import android.health.connect.datatypes.SleepSessionRecord;
 import android.health.connect.datatypes.StepsRecord;
+import android.health.connect.datatypes.TotalCaloriesBurnedRecord;
+import android.health.connect.datatypes.units.Power;
+import android.healthconnect.cts.lib.TestAppProxy;
+import android.healthconnect.cts.utils.AssumptionCheckerRule;
 import android.healthconnect.cts.utils.TestUtils;
-import android.os.Bundle;
+import android.util.Pair;
 
 import androidx.test.core.app.ApplicationProvider;
 import androidx.test.platform.app.InstrumentationRegistry;
 import androidx.test.runner.AndroidJUnit4;
 
-import com.android.cts.install.lib.TestApp;
-
 import org.junit.After;
-import org.junit.Assert;
-import org.junit.Assume;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
+import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @RunWith(AndroidJUnit4.class)
 public class HealthConnectDeviceTest {
     static final String TAG = "HealthConnectDeviceTest";
     public static final String MANAGE_HEALTH_DATA = HealthPermissions.MANAGE_HEALTH_DATA_PERMISSION;
+
+    public static final String APP_A_DECLARED_PERMISSION = HealthPermissions.READ_STEPS;
+
     static final long VERSION_CODE = 1;
     private static final int ASYNC_RETRIES = 3;
     private static final int ASYNC_RETRY_DELAY_MILLIS = 500;
 
-    static final TestApp APP_A_WITH_READ_WRITE_PERMS =
-            new TestApp(
-                    "TestAppA",
-                    "android.healthconnect.cts.testapp.readWritePerms.A",
-                    VERSION_CODE,
-                    false,
-                    "CtsHealthConnectTestAppA.apk");
+    private static final Instant NOW = Instant.now().truncatedTo(ChronoUnit.MILLIS);
 
-    private static final TestApp APP_B_WITH_READ_WRITE_PERMS =
-            new TestApp(
-                    "TestAppB",
-                    "android.healthconnect.cts.testapp.readWritePerms.B",
-                    VERSION_CODE,
-                    false,
-                    "CtsHealthConnectTestAppB.apk");
+    private static final List<Record> TEST_RECORDS =
+            List.of(
+                    getStepsRecord(getEmptyMetadata()),
+                    getHeartRateRecord(getEmptyMetadata()),
+                    getBasalMetabolicRateRecord(getEmptyMetadata()),
+                    getExerciseSessionRecord(getEmptyMetadata()));
 
-    private static final TestApp APP_WITH_WRITE_PERMS_ONLY =
-            new TestApp(
-                    "TestAppC",
-                    "android.healthconnect.cts.testapp.writePermsOnly",
-                    VERSION_CODE,
-                    false,
-                    "CtsHealthConnectTestAppWithWritePermissionsOnly.apk");
+    private static final TestAppProxy APP_A_WITH_READ_WRITE_PERMS =
+            TestAppProxy.forPackageName("android.healthconnect.cts.testapp.readWritePerms.A");
 
-    private static final TestApp APP_WITH_DATA_MANAGE_PERMS_ONLY =
-            new TestApp(
-                    "TestAppD",
-                    "android.healthconnect.cts.testapp.data.manage.permissions",
-                    VERSION_CODE,
-                    false,
-                    "CtsHealthConnectTestAppWithDataManagePermission.apk");
+    private static final TestAppProxy APP_B_WITH_READ_WRITE_PERMS =
+            TestAppProxy.forPackageName("android.healthconnect.cts.testapp.readWritePerms.B");
+
+    private static final TestAppProxy APP_WITH_WRITE_PERMS_ONLY =
+            TestAppProxy.forPackageName("android.healthconnect.cts.testapp.writePermsOnly");
+
+    private static final TestAppProxy APP_WITH_DATA_MANAGE_PERMS_ONLY =
+            TestAppProxy.forPackageName(
+                    "android.healthconnect.cts.testapp.data.manage.permissions");
 
     private static final String STEPS_1000_CLIENT_ID = "client-id-1";
     private static final String STEPS_2000_CLIENT_ID = "client-id-2";
@@ -166,187 +168,255 @@ public class HealthConnectDeviceTest {
 
     private Context mContext;
 
+    @Rule
+    public AssumptionCheckerRule mSupportedHardwareRule =
+            new AssumptionCheckerRule(
+                    TestUtils::isHardwareSupported, "Tests should run on supported hardware only.");
+
     @Before
     public void setUp() {
-        Assume.assumeFalse(hasSystemFeature(AUTOMOTIVE_FEATURE));
         mContext = ApplicationProvider.getApplicationContext();
+        grantPermission(APP_A_WITH_READ_WRITE_PERMS.getPackageName(), APP_A_DECLARED_PERMISSION);
     }
 
     @After
     public void tearDown() throws InterruptedException {
         deleteTestData();
         deleteAllStagedRemoteData();
+        grantPermission(APP_A_WITH_READ_WRITE_PERMS.getPackageName(), APP_A_DECLARED_PERMISSION);
     }
 
     @Test
     public void testAppWithNormalReadWritePermCanInsertRecord() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(record);
     }
 
     @Test
     public void testAnAppCantDeleteAnotherAppEntry() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        String recordId = APP_A_WITH_READ_WRITE_PERMS.insertRecords(record).get(0);
+        RecordIdFilter recordIdFilter = RecordIdFilter.fromId(StepsRecord.class, recordId);
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
+        HealthConnectException e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () -> APP_B_WITH_READ_WRITE_PERMS.deleteRecords(recordIdFilter));
 
-        try {
-            deleteRecordsAs(APP_B_WITH_READ_WRITE_PERMS, listOfRecordIdsAndClass);
-            Assert.fail("Should have thrown an Invalid Argument Exception!");
-        } catch (HealthConnectException e) {
-
-            assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_INVALID_ARGUMENT);
-        }
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_INVALID_ARGUMENT);
     }
 
     @Test
     public void testAnAppCantUpdateAnotherAppEntry() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        String recordId = APP_A_WITH_READ_WRITE_PERMS.insertRecords(record).get(0);
+        StepsRecord updatedRecord = getStepsRecord(getMetadataForId(recordId));
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
+        HealthConnectException e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () -> APP_B_WITH_READ_WRITE_PERMS.updateRecords(updatedRecord));
 
-        try {
-            updateRecordsAs(APP_B_WITH_READ_WRITE_PERMS, listOfRecordIdsAndClass);
-            Assert.fail("Should have thrown an Invalid Argument Exception!");
-        } catch (HealthConnectException e) {
-            assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_INVALID_ARGUMENT);
-        }
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_INVALID_ARGUMENT);
     }
 
     @Test
     public void testDataOriginGetsOverriddenBySelfPackageName() throws Exception {
-        Bundle bundle =
-                insertRecordWithAnotherAppPackageName(
-                        APP_A_WITH_READ_WRITE_PERMS, APP_B_WITH_READ_WRITE_PERMS);
+        ExerciseSessionRecord record =
+                getExerciseSessionRecord(getMetadata(getDataOrigin("ignored.package.name")));
+        String recordId = APP_A_WITH_READ_WRITE_PERMS.insertRecords(record).get(0);
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
+        List<ExerciseSessionRecord> records =
+                readRecords(
+                        new ReadRecordsRequestUsingFilters.Builder<>(ExerciseSessionRecord.class)
+                                .build());
 
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            Class<? extends Record> recordType =
-                    (Class<? extends Record>) Class.forName(recordTypeAndRecordIds.getRecordType());
-            if (!recordType.equals(ExerciseSessionRecord.class)) {
-                // skip other record types since we don't have read permissions for these.
-                continue;
-            }
-            List<Record> records =
-                    (List<Record>)
-                            readRecords(
-                                    new ReadRecordsRequestUsingFilters.Builder<>(recordType)
-                                            .build());
-            assertThat(records).isNotEmpty();
-            for (Record record : records) {
-                assertThat(record.getMetadata().getDataOrigin().getPackageName())
-                        .isEqualTo(APP_A_WITH_READ_WRITE_PERMS.getPackageName());
-            }
-        }
+        assertThat(records).hasSize(1);
+        assertThat(records.get(0).getMetadata())
+                .isEqualTo(
+                        new Metadata.Builder()
+                                .setId(recordId)
+                                .setDataOrigin(
+                                        getDataOrigin(APP_A_WITH_READ_WRITE_PERMS.getPackageName()))
+                                .build());
     }
 
     @Test
     public void testAppWithWritePermsOnly_readOwnData_success() throws Exception {
-        Bundle bundle = insertRecordAs(APP_WITH_WRITE_PERMS_ONLY);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        String recordId = APP_WITH_WRITE_PERMS_ONLY.insertRecords(record).get(0);
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
+        List<StepsRecord> records =
+                APP_WITH_WRITE_PERMS_ONLY.readRecords(
+                        new ReadRecordsRequestUsingFilters.Builder<>(StepsRecord.class)
+                                .addDataOrigins(
+                                        getDataOrigin(APP_WITH_WRITE_PERMS_ONLY.getPackageName()))
+                                .build());
 
-        ArrayList<String> recordClassesToRead = new ArrayList<>();
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            recordClassesToRead.add(recordTypeAndRecordIds.getRecordType());
-        }
-
-        bundle =
-                readRecordsAs(
-                        APP_WITH_WRITE_PERMS_ONLY,
-                        recordClassesToRead,
-                        /* dataOriginFilterPackageNames= */ Optional.of(
-                                List.of(APP_WITH_WRITE_PERMS_ONLY.getPackageName())));
-        assertThat(bundle.getInt(READ_RECORDS_SIZE)).isEqualTo(listOfRecordIdsAndClass.size());
+        assertThat(records).hasSize(1);
+        assertThat(records.get(0))
+                .isEqualTo(
+                        getStepsRecord(
+                                getMetadataForId(
+                                        recordId,
+                                        getDataOrigin(
+                                                APP_WITH_WRITE_PERMS_ONLY.getPackageName()))));
     }
 
     @Test
     public void testAppWithWritePermsOnly_readDataFromAllApps_throwsError() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(record).get(0);
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
-
-        ArrayList<String> recordClassesToRead = new ArrayList<>();
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            recordClassesToRead.add(recordTypeAndRecordIds.getRecordType());
-        }
-
-        try {
-            bundle =
-                    readRecordsAs(
-                            APP_WITH_WRITE_PERMS_ONLY,
-                            recordClassesToRead,
-                            // empty data implies all data is requested
-                            /* dataOriginFilterPackageNames= */ Optional.of(List.of()));
-            fail("Expected to fail with HealthConnectException but didn't");
-        } catch (Exception e) {
-            assertThat(e).isInstanceOf(HealthConnectException.class);
-            assertThat(((HealthConnectException) e).getErrorCode())
-                    .isEqualTo(HealthConnectException.ERROR_SECURITY);
-        }
+        HealthConnectException e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () ->
+                                APP_WITH_WRITE_PERMS_ONLY.readRecords(
+                                        new ReadRecordsRequestUsingFilters.Builder<>(
+                                                        StepsRecord.class)
+                                                .build()));
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
     }
 
     @Test
     public void testAppWithWritePermsOnly_readDataFromOtherApps_throwsError() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(record);
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
+        HealthConnectException e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () ->
+                                APP_WITH_WRITE_PERMS_ONLY.readRecords(
+                                        new ReadRecordsRequestUsingFilters.Builder<>(
+                                                        StepsRecord.class)
+                                                .addDataOrigins(
+                                                        getDataOrigin(
+                                                                APP_WITH_WRITE_PERMS_ONLY
+                                                                        .getPackageName()))
+                                                .addDataOrigins(
+                                                        getDataOrigin(
+                                                                APP_A_WITH_READ_WRITE_PERMS
+                                                                        .getPackageName()))
+                                                .build()));
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
+    }
 
-        ArrayList<String> recordClassesToRead = new ArrayList<>();
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            recordClassesToRead.add(recordTypeAndRecordIds.getRecordType());
+    @Test
+    public void testAppWithReadPerms_readOtherAppsDataByIds_expectSuccess() throws Exception {
+        List<Pair<Class<? extends Record>, String>> classAndIdPairs =
+                List.of(
+                        insertRecord(APP_WITH_WRITE_PERMS_ONLY, getStepsRecordWithEmptyMetaData()),
+                        insertRecord(
+                                APP_WITH_WRITE_PERMS_ONLY, getHeartRateRecordWithEmptyMetadata()),
+                        insertRecord(
+                                APP_WITH_WRITE_PERMS_ONLY, buildSleepSessionWithEmptyMetadata()),
+                        insertRecord(
+                                APP_WITH_WRITE_PERMS_ONLY, getDistanceRecordWithEmptyMetadata()),
+                        insertRecord(
+                                APP_WITH_WRITE_PERMS_ONLY,
+                                getTotalCaloriesBurnedRecordWithEmptyMetadata()),
+                        insertRecord(
+                                APP_WITH_WRITE_PERMS_ONLY, buildExerciseSessionWithEmptyMetadata()),
+                        insertRecord(
+                                APP_A_WITH_READ_WRITE_PERMS, getStepsRecordWithEmptyMetaData()),
+                        insertRecord(
+                                APP_A_WITH_READ_WRITE_PERMS, getHeartRateRecordWithEmptyMetadata()),
+                        insertRecord(
+                                APP_A_WITH_READ_WRITE_PERMS, buildSleepSessionWithEmptyMetadata()),
+                        insertRecord(
+                                APP_A_WITH_READ_WRITE_PERMS, getDistanceRecordWithEmptyMetadata()),
+                        insertRecord(
+                                APP_A_WITH_READ_WRITE_PERMS,
+                                getTotalCaloriesBurnedRecordWithEmptyMetadata()),
+                        insertRecord(
+                                APP_A_WITH_READ_WRITE_PERMS,
+                                buildExerciseSessionWithEmptyMetadata()));
+
+        List<Record> readRecords = new ArrayList<>();
+        for (var classAndId : classAndIdPairs) {
+            readRecords.addAll(
+                    APP_A_WITH_READ_WRITE_PERMS.readRecords(
+                            new ReadRecordsRequestUsingIds.Builder<>(classAndId.first)
+                                    .addId(classAndId.second)
+                                    .build()));
         }
 
-        try {
-            readRecordsAs(
-                    APP_WITH_WRITE_PERMS_ONLY,
-                    recordClassesToRead,
-                    /* dataOriginFilterPackageNames= */ Optional.of(
-                            List.of(
-                                    APP_WITH_WRITE_PERMS_ONLY.getPackageName(),
-                                    APP_A_WITH_READ_WRITE_PERMS.getPackageName())));
-            fail("Expected to fail with HealthConnectException but didn't");
-        } catch (Exception e) {
-            assertThat(e).isInstanceOf(HealthConnectException.class);
-            assertThat(((HealthConnectException) e).getErrorCode())
-                    .isEqualTo(HealthConnectException.ERROR_SECURITY);
+        List<String> readIds =
+                readRecords.stream().map(Record::getMetadata).map(Metadata::getId).toList();
+        List<String> insertedIds = classAndIdPairs.stream().map(pair -> pair.second).toList();
+        assertThat(readIds).containsExactlyElementsIn(insertedIds);
+    }
+
+    @Test
+    public void testAppWithReadPerms_readOtherAppsDataByFilters_expectSuccess() throws Exception {
+        List<String> insertedRecordIds =
+                List.of(
+                        APP_WITH_WRITE_PERMS_ONLY.insertRecord(getStepsRecordWithEmptyMetaData()),
+                        APP_WITH_WRITE_PERMS_ONLY.insertRecord(
+                                getHeartRateRecordWithEmptyMetadata()),
+                        APP_WITH_WRITE_PERMS_ONLY.insertRecord(
+                                buildSleepSessionWithEmptyMetadata()),
+                        APP_WITH_WRITE_PERMS_ONLY.insertRecord(
+                                getDistanceRecordWithEmptyMetadata()),
+                        APP_WITH_WRITE_PERMS_ONLY.insertRecord(
+                                getTotalCaloriesBurnedRecordWithEmptyMetadata()),
+                        APP_WITH_WRITE_PERMS_ONLY.insertRecord(
+                                buildExerciseSessionWithEmptyMetadata()),
+                        APP_A_WITH_READ_WRITE_PERMS.insertRecord(getStepsRecordWithEmptyMetaData()),
+                        APP_A_WITH_READ_WRITE_PERMS.insertRecord(
+                                getHeartRateRecordWithEmptyMetadata()),
+                        APP_A_WITH_READ_WRITE_PERMS.insertRecord(
+                                buildSleepSessionWithEmptyMetadata()),
+                        APP_A_WITH_READ_WRITE_PERMS.insertRecord(
+                                getDistanceRecordWithEmptyMetadata()),
+                        APP_A_WITH_READ_WRITE_PERMS.insertRecord(
+                                getTotalCaloriesBurnedRecordWithEmptyMetadata()),
+                        APP_A_WITH_READ_WRITE_PERMS.insertRecord(
+                                buildExerciseSessionWithEmptyMetadata()));
+
+        List<String> readRecordIds = new ArrayList<>();
+        List<String> packageNameFilters =
+                List.of(
+                        APP_A_WITH_READ_WRITE_PERMS.getPackageName(),
+                        APP_WITH_WRITE_PERMS_ONLY.getPackageName());
+        List<Class<? extends Record>> classes =
+                List.of(
+                        StepsRecord.class,
+                        HeartRateRecord.class,
+                        DistanceRecord.class,
+                        TotalCaloriesBurnedRecord.class,
+                        ExerciseSessionRecord.class,
+                        SleepSessionRecord.class);
+        for (Class<? extends Record> clazz : classes) {
+            readRecordIds.addAll(
+                    getRecordIds(
+                            APP_A_WITH_READ_WRITE_PERMS.readRecords(
+                                    createReadRecordsRequestUsingFilters(
+                                            clazz, packageNameFilters))));
         }
+
+        assertThat(readRecordIds).containsExactlyElementsIn(insertedRecordIds);
     }
 
     @Test
     public void testAppWithWritePermsOnly_readDataByIdForOwnApp_success() throws Exception {
-        Bundle bundle =
-                insertStepsRecordAs(APP_A_WITH_READ_WRITE_PERMS, "01:00 PM", "03:00 PM", 1000);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-        List<Record> writtenRecords = TestUtils.insertRecords(List.of(STEPS_1000, STEPS_2000));
-        List<String> recordIds =
-                writtenRecords.stream()
-                        .map(record -> record.getMetadata().getId())
-                        .collect(Collectors.toList());
+        List<Record> ownRecords = TestUtils.insertRecords(List.of(STEPS_1000, STEPS_2000));
+        List<String> ownRecordIds =
+                ownRecords.stream().map(record -> record.getMetadata().getId()).toList();
 
         List<Record> readRecords =
                 TestUtils.readRecords(
                         new ReadRecordsRequestUsingIds.Builder(StepsRecord.class)
-                                .addId(recordIds.get(0))
-                                .addId(recordIds.get(1))
+                                .addId(ownRecordIds.get(0))
+                                .addId(ownRecordIds.get(1))
                                 .build());
 
         assertThat(
                         readRecords.stream()
                                 .map(record -> record.getMetadata().getClientRecordId())
-                                .collect(Collectors.toList()))
+                                .toList())
                 .containsExactly(STEPS_1000_CLIENT_ID, STEPS_2000_CLIENT_ID);
     }
 
@@ -354,25 +424,18 @@ public class HealthConnectDeviceTest {
     @Test
     public void testAppWithWritePermsOnly_readDataByIdForOtherApps_filtersOutOtherAppData()
             throws Exception {
-        Bundle bundle =
-                insertStepsRecordAs(APP_A_WITH_READ_WRITE_PERMS, "01:00 PM", "03:00 PM", 1000);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-        String otherAppRecordId =
-                ((List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS))
-                        .get(0)
-                        .getRecordIds()
-                        .get(0);
-        List<Record> writtenRecords = TestUtils.insertRecords(List.of(STEPS_1000, STEPS_2000));
-        List<String> recordIds =
-                writtenRecords.stream()
-                        .map(record -> record.getMetadata().getId())
-                        .collect(Collectors.toList());
+        StepsRecord otherAppRecord = getStepsRecord(getEmptyMetadata());
+        String otherAppRecordId = APP_A_WITH_READ_WRITE_PERMS.insertRecords(otherAppRecord).get(0);
+
+        List<Record> ownRecords = TestUtils.insertRecords(List.of(STEPS_1000, STEPS_2000));
+        List<String> ownRecordIds =
+                ownRecords.stream().map(record -> record.getMetadata().getId()).toList();
 
         List<Record> readRecords =
                 TestUtils.readRecords(
                         new ReadRecordsRequestUsingIds.Builder(StepsRecord.class)
-                                .addId(recordIds.get(0))
-                                .addId(recordIds.get(1))
+                                .addId(ownRecordIds.get(0))
+                                .addId(ownRecordIds.get(1))
                                 .addId(otherAppRecordId)
                                 .build());
 
@@ -501,144 +564,124 @@ public class HealthConnectDeviceTest {
     }
 
     @Test
-    public void testAppWithManageHealthDataPermsOnlyCantInsertRecords() throws Exception {
-        try {
-            insertRecordAs(APP_WITH_DATA_MANAGE_PERMS_ONLY);
-            Assert.fail("Should have thrown Exception while inserting records!");
-        } catch (HealthConnectException e) {
-            assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
-        }
+    public void testAppWithManageHealthDataPermsOnlyCantInsertRecords() {
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+
+        HealthConnectException e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () -> APP_WITH_DATA_MANAGE_PERMS_ONLY.insertRecords(record));
+
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
     }
 
     @Test
     public void testAppWithManageHealthDataPermsOnlyCantUpdateRecords() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        String recordId = APP_WITH_WRITE_PERMS_ONLY.insertRecords(record).get(0);
+        StepsRecord updatedRecord = getStepsRecord(getMetadataForId(recordId));
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
+        HealthConnectException e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () -> APP_WITH_DATA_MANAGE_PERMS_ONLY.updateRecords(updatedRecord));
 
-        try {
-            updateRecordsAs(APP_WITH_DATA_MANAGE_PERMS_ONLY, listOfRecordIdsAndClass);
-            Assert.fail("Should have thrown Health Connect Exception!");
-        } catch (HealthConnectException e) {
-            assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
-        }
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
     }
 
     @Test
     public void testTwoAppsCanUseSameClientRecordIdsToInsert() throws Exception {
-        final double clientId = Math.random();
-        Bundle bundle = insertRecordWithGivenClientId(APP_A_WITH_READ_WRITE_PERMS, clientId);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord record = getStepsRecord(getMetadataForClientId("common.client.id"));
 
-        bundle = insertRecordWithGivenClientId(APP_B_WITH_READ_WRITE_PERMS, clientId);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(record);
+        APP_B_WITH_READ_WRITE_PERMS.insertRecords(record);
     }
 
     @Test
     public void testAppCanReadRecordsUsingDataOriginFilters() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(TEST_RECORDS);
 
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
+        List<BasalMetabolicRateRecord> basalMetabolicRateRecords =
+                APP_A_WITH_READ_WRITE_PERMS.readRecords(
+                        new ReadRecordsRequestUsingFilters.Builder<>(BasalMetabolicRateRecord.class)
+                                .build());
+        List<ExerciseSessionRecord> exerciseSessionRecords =
+                APP_A_WITH_READ_WRITE_PERMS.readRecords(
+                        new ReadRecordsRequestUsingFilters.Builder<>(ExerciseSessionRecord.class)
+                                .build());
+        List<HeartRateRecord> heartRateRecords =
+                APP_A_WITH_READ_WRITE_PERMS.readRecords(
+                        new ReadRecordsRequestUsingFilters.Builder<>(HeartRateRecord.class)
+                                .build());
+        List<StepsRecord> stepsRecords =
+                APP_A_WITH_READ_WRITE_PERMS.readRecords(
+                        new ReadRecordsRequestUsingFilters.Builder<>(StepsRecord.class).build());
 
-        int noOfRecordsInsertedByAppA = 0;
-        Set<String> recordClassesToReadSet = new HashSet<>();
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            noOfRecordsInsertedByAppA += recordTypeAndRecordIds.getRecordIds().size();
-            recordClassesToReadSet.add(recordTypeAndRecordIds.getRecordType());
-        }
-
-        bundle = insertRecordAs(APP_B_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-
-        listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
-
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            recordClassesToReadSet.add(recordTypeAndRecordIds.getRecordType());
-        }
-
-        ArrayList<String> recordClassesToRead = new ArrayList<>();
-        for (String recordClass : recordClassesToReadSet) {
-            recordClassesToRead.add(recordClass);
-        }
-        bundle =
-                readRecordsUsingDataOriginFiltersAs(
-                        APP_A_WITH_READ_WRITE_PERMS, recordClassesToRead);
-        assertThat(bundle.getInt(READ_RECORDS_SIZE)).isEqualTo(noOfRecordsInsertedByAppA);
+        assertThat(basalMetabolicRateRecords).hasSize(1);
+        assertThat(exerciseSessionRecords).hasSize(1);
+        assertThat(heartRateRecords).hasSize(1);
+        assertThat(stepsRecords).hasSize(1);
     }
 
     @Test
-    public void testAppCanReadChangeLogsUsingDataOriginFilters() throws Exception {
-        Bundle bundle =
-                getChangeLogTokenAs(
-                        APP_B_WITH_READ_WRITE_PERMS,
-                        APP_A_WITH_READ_WRITE_PERMS.getPackageName(),
-                        null);
-        String changeLogTokenForAppB = bundle.getString(CHANGE_LOG_TOKEN);
+    public void testAppWithReadPerms_getChangeTokensAndLogsOfOtherApps_expectSuccess()
+            throws Exception {
+        String changeLogTokenForAppB =
+                APP_B_WITH_READ_WRITE_PERMS.getChangeLogToken(
+                        new ChangeLogTokenRequest.Builder()
+                                .addRecordType(StepsRecord.class)
+                                .addRecordType(HeartRateRecord.class)
+                                .addRecordType(BasalMetabolicRateRecord.class)
+                                .addRecordType(ExerciseSessionRecord.class)
+                                .addDataOriginFilter(
+                                        getDataOrigin(APP_A_WITH_READ_WRITE_PERMS.getPackageName()))
+                                .addRecordType(StepsRecord.class)
+                                .addRecordType(HeartRateRecord.class)
+                                .addRecordType(DistanceRecord.class)
+                                .addRecordType(TotalCaloriesBurnedRecord.class)
+                                .addRecordType(SleepSessionRecord.class)
+                                .addRecordType(ExerciseSessionRecord.class)
+                                .build());
+        String changeLogTokenForAppA =
+                APP_A_WITH_READ_WRITE_PERMS.getChangeLogToken(
+                        new ChangeLogTokenRequest.Builder()
+                                .addRecordType(StepsRecord.class)
+                                .addRecordType(HeartRateRecord.class)
+                                .addRecordType(BasalMetabolicRateRecord.class)
+                                .addRecordType(ExerciseSessionRecord.class)
+                                .addDataOriginFilter(
+                                        getDataOrigin(APP_B_WITH_READ_WRITE_PERMS.getPackageName()))
+                                .build());
+        List<Record> recordsB = TEST_RECORDS;
+        List<Record> recordsA =
+                List.of(
+                        getStepsRecord(getEmptyMetadata()),
+                        getHeartRateRecord(getEmptyMetadata()),
+                        getDistanceRecordWithEmptyMetadata(),
+                        buildExerciseSessionWithEmptyMetadata(),
+                        buildSleepSessionWithEmptyMetadata(),
+                        getTotalCaloriesBurnedRecordWithEmptyMetadata());
+        List<String> recordIdsA = APP_A_WITH_READ_WRITE_PERMS.insertRecords(recordsA);
+        List<String> recordIdsB = APP_B_WITH_READ_WRITE_PERMS.insertRecords(recordsB);
+        APP_B_WITH_READ_WRITE_PERMS.deleteRecords(getRecordIdFilters(recordIdsB, recordsB));
 
-        bundle =
-                getChangeLogTokenAs(
-                        APP_A_WITH_READ_WRITE_PERMS,
-                        APP_B_WITH_READ_WRITE_PERMS.getPackageName(),
-                        null);
-        String changeLogTokenForAppA = bundle.getString(CHANGE_LOG_TOKEN);
+        ChangeLogsResponse responseB =
+                APP_B_WITH_READ_WRITE_PERMS.getChangeLogs(
+                        new ChangeLogsRequest.Builder(changeLogTokenForAppB).build());
+        ChangeLogsResponse responseA =
+                APP_A_WITH_READ_WRITE_PERMS.getChangeLogs(
+                        new ChangeLogsRequest.Builder(changeLogTokenForAppA).build());
 
-        bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
-
-        List<String> listOfRecordIdsInsertedByAppA = new ArrayList<>();
-        int noOfRecordsInsertedByAppA = 0;
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            noOfRecordsInsertedByAppA += recordTypeAndRecordIds.getRecordIds().size();
-            listOfRecordIdsInsertedByAppA.addAll(recordTypeAndRecordIds.getRecordIds());
-        }
-
-        updateRecordsAs(APP_A_WITH_READ_WRITE_PERMS, listOfRecordIdsAndClass);
-
-        bundle = insertRecordAs(APP_B_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-
-        listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
-
-        int noOfRecordsInsertedByAppB = 0;
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            noOfRecordsInsertedByAppB += recordTypeAndRecordIds.getRecordIds().size();
-        }
-
-        deleteRecordsAs(APP_B_WITH_READ_WRITE_PERMS, listOfRecordIdsAndClass);
-
-        bundle =
-                readChangeLogsUsingDataOriginFiltersAs(
-                        APP_B_WITH_READ_WRITE_PERMS, changeLogTokenForAppB);
-
-        ChangeLogsResponse response = bundle.getParcelable(CHANGE_LOGS_RESPONSE);
-
-        assertThat(response.getUpsertedRecords()).hasSize(noOfRecordsInsertedByAppA);
+        assertThat(responseB.getUpsertedRecords()).hasSize(recordsA.size());
         assertThat(
-                        response.getUpsertedRecords().stream()
+                        responseB.getUpsertedRecords().stream()
                                 .map(Record::getMetadata)
                                 .map(Metadata::getId)
                                 .toList())
-                .containsExactlyElementsIn(listOfRecordIdsInsertedByAppA);
-
-        assertThat(response.getDeletedLogs()).isEmpty();
-
-        bundle =
-                readChangeLogsUsingDataOriginFiltersAs(
-                        APP_A_WITH_READ_WRITE_PERMS, changeLogTokenForAppA);
-
-        response = bundle.getParcelable(CHANGE_LOGS_RESPONSE);
-
-        assertThat(response.getUpsertedRecords()).isEmpty();
-        assertThat(response.getDeletedLogs()).hasSize(noOfRecordsInsertedByAppB);
+                .containsExactlyElementsIn(recordIdsA);
+        assertThat(responseB.getDeletedLogs()).isEmpty();
+        assertThat(responseA.getUpsertedRecords()).isEmpty();
+        assertThat(responseA.getDeletedLogs()).hasSize(recordsB.size());
     }
 
     @Test
@@ -650,8 +693,8 @@ public class HealthConnectDeviceTest {
                 fetchDataOriginsPriorityOrder(HealthDataCategory.ACTIVITY)
                         .getDataOriginsPriorityOrder()
                         .stream()
-                        .map(dataOrigin -> dataOrigin.getPackageName())
-                        .collect(Collectors.toList());
+                        .map(DataOrigin::getPackageName)
+                        .toList();
 
         List<String> healthPerms =
                 getGrantedHealthPermissions(APP_A_WITH_READ_WRITE_PERMS.getPackageName());
@@ -667,8 +710,8 @@ public class HealthConnectDeviceTest {
                 fetchDataOriginsPriorityOrder(HealthDataCategory.ACTIVITY)
                         .getDataOriginsPriorityOrder()
                         .stream()
-                        .map(dataOrigin -> dataOrigin.getPackageName())
-                        .collect(Collectors.toList());
+                        .map(DataOrigin::getPackageName)
+                        .toList();
 
         assertThat(newPriorityList).hasSize(oldPriorityList.size() + 1);
         assertThat(newPriorityList).contains(APP_A_WITH_READ_WRITE_PERMS.getPackageName());
@@ -758,6 +801,25 @@ public class HealthConnectDeviceTest {
     }
 
     @Test
+    public void testSelfRevokePermissions_revokedOnKill() throws Exception {
+        grantPermission(APP_A_WITH_READ_WRITE_PERMS.getPackageName(), APP_A_DECLARED_PERMISSION);
+
+        APP_A_WITH_READ_WRITE_PERMS.selfRevokePermission(APP_A_DECLARED_PERMISSION);
+        APP_A_WITH_READ_WRITE_PERMS.kill();
+
+        eventually(
+                () ->
+                        assertThat(
+                                        mContext.getPackageManager()
+                                                .checkPermission(
+                                                        APP_A_DECLARED_PERMISSION,
+                                                        APP_A_WITH_READ_WRITE_PERMS
+                                                                .getPackageName()))
+                                .isEqualTo(PackageManager.PERMISSION_DENIED),
+                /* timeoutMillis= */ 7000);
+    }
+
+    @Test
     public void testAppWithManageHealthDataPermissionCanUpdatePriority()
             throws InterruptedException {
         UiAutomation uiAutomation = InstrumentationRegistry.getInstrumentation().getUiAutomation();
@@ -808,79 +870,35 @@ public class HealthConnectDeviceTest {
 
     @Test
     public void testAppWithManageHealthDataPermsCanReadAnotherAppEntry() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
-
-        ArrayList<String> recordClassesToRead = new ArrayList<>();
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            recordClassesToRead.add(recordTypeAndRecordIds.getRecordType());
-        }
-
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(record);
         UiAutomation uiAutomation = InstrumentationRegistry.getInstrumentation().getUiAutomation();
         uiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
-        int recordsSize = 0;
-        try {
-            for (String recordClass : recordClassesToRead) {
-                List<? extends Record> recordsRead =
-                        readRecords(
-                                new ReadRecordsRequestUsingFilters.Builder<>(
-                                                (Class<? extends Record>)
-                                                        Class.forName(recordClass))
-                                        .build(),
-                                ApplicationProvider.getApplicationContext());
 
-                recordsSize += recordsRead.size();
-            }
-        } catch (Exception e) {
-            Assert.fail(
-                    "App with MANAGE_HEALTH_DATA  permission should have read entries of another"
-                            + " app!");
-        }
-        assertThat(recordsSize).isNotEqualTo(0);
+        List<StepsRecord> recordsRead =
+                readRecords(
+                        new ReadRecordsRequestUsingFilters.Builder<>(StepsRecord.class).build(),
+                        ApplicationProvider.getApplicationContext());
+
+        assertThat(recordsRead).hasSize(1);
     }
 
     @Test
     public void testAppWithManageHealthDataPermsCanDeleteAnotherAppEntry() throws Exception {
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-
-        List<TestUtils.RecordTypeAndRecordIds> listOfRecordIdsAndClass =
-                (List<TestUtils.RecordTypeAndRecordIds>) bundle.getSerializable(RECORD_IDS);
-
-        List<RecordIdFilter> recordIdFilters = new ArrayList<>();
-        for (TestUtils.RecordTypeAndRecordIds recordTypeAndRecordIds : listOfRecordIdsAndClass) {
-            for (String recordId : recordTypeAndRecordIds.getRecordIds()) {
-                recordIdFilters.add(
-                        RecordIdFilter.fromId(
-                                (Class<? extends Record>)
-                                        Class.forName(recordTypeAndRecordIds.getRecordType()),
-                                recordId));
-            }
-        }
-
+        StepsRecord record = getStepsRecord(getEmptyMetadata());
+        String recordId = APP_A_WITH_READ_WRITE_PERMS.insertRecords(record).get(0);
         UiAutomation uiAutomation = InstrumentationRegistry.getInstrumentation().getUiAutomation();
         uiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
-        try {
-            verifyDeleteRecords(recordIdFilters, ApplicationProvider.getApplicationContext());
-        } catch (Exception e) {
-            Assert.fail(
-                    "App with MANAGE_HEALTH_DATA  permission should have deleted data from other"
-                            + " app!");
-        }
+
+        verifyDeleteRecords(List.of(RecordIdFilter.fromId(StepsRecord.class, recordId)));
     }
 
     @Test
     public void testToVerifyGetContributorApplicationsInfo() throws Exception {
         UiAutomation uiAutomation = InstrumentationRegistry.getInstrumentation().getUiAutomation();
 
-        Bundle bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-
-        bundle = insertRecordAs(APP_B_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(TEST_RECORDS);
+        APP_B_WITH_READ_WRITE_PERMS.insertRecords(TEST_RECORDS);
 
         List<String> pkgNameList =
                 List.of(
@@ -893,9 +911,7 @@ public class HealthConnectDeviceTest {
         // finishes (or we run out of retries).
         for (int i = 1; i <= ASYNC_RETRIES; i++) {
             List<String> appInfoList =
-                    getApplicationInfo().stream()
-                            .map(appInfo -> appInfo.getPackageName())
-                            .collect(Collectors.toList());
+                    getApplicationInfo().stream().map(AppInfo::getPackageName).toList();
 
             try {
                 assertThat(appInfoList).containsAtLeastElementsIn(pkgNameList);
@@ -915,39 +931,51 @@ public class HealthConnectDeviceTest {
             throws Exception {
         UiAutomation uiAutomation = InstrumentationRegistry.getInstrumentation().getUiAutomation();
 
-        revokeAndThenGrantHealthPermissions(APP_A_WITH_READ_WRITE_PERMS);
-        revokeAndThenGrantHealthPermissions(APP_B_WITH_READ_WRITE_PERMS);
+        revokeAndThenGrantHealthPermissions(APP_A_WITH_READ_WRITE_PERMS.getPackageName());
+        revokeAndThenGrantHealthPermissions(APP_B_WITH_READ_WRITE_PERMS.getPackageName());
 
         List<DataOrigin> dataOriginPrioOrder =
-                getDataOriginPriorityOrder(
-                        APP_A_WITH_READ_WRITE_PERMS, APP_B_WITH_READ_WRITE_PERMS);
+                getDataOrigins(
+                        APP_A_WITH_READ_WRITE_PERMS.getPackageName(),
+                        APP_B_WITH_READ_WRITE_PERMS.getPackageName());
 
         uiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
         List<String> priorityList =
                 fetchDataOriginsPriorityOrder(HealthDataCategory.ACTIVITY)
                         .getDataOriginsPriorityOrder()
                         .stream()
-                        .map(dataOrigin -> dataOrigin.getPackageName())
-                        .collect(Collectors.toList());
+                        .map(DataOrigin::getPackageName)
+                        .toList();
 
         assertThat(
                         priorityList.equals(
                                 dataOriginPrioOrder.stream()
-                                        .map(dataOrigin -> dataOrigin.getPackageName())
-                                        .collect(Collectors.toList())))
+                                        .map(DataOrigin::getPackageName)
+                                        .toList()))
                 .isTrue();
 
-        Bundle bundle =
-                insertStepsRecordAs(APP_A_WITH_READ_WRITE_PERMS, "01:00 PM", "03:00 PM", 1000);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-        bundle = insertStepsRecordAs(APP_B_WITH_READ_WRITE_PERMS, "02:00 PM", "04:00 PM", 2000);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        StepsRecord stepsRecordA =
+                new StepsRecord.Builder(
+                                getEmptyMetadata(),
+                                yesterdayAt("13:00"),
+                                yesterdayAt("15:00"),
+                                1000)
+                        .build();
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(stepsRecordA);
+        StepsRecord stepsRecordB =
+                new StepsRecord.Builder(
+                                getEmptyMetadata(),
+                                yesterdayAt("14:00"),
+                                yesterdayAt("16:00"),
+                                2000)
+                        .build();
+        APP_B_WITH_READ_WRITE_PERMS.insertRecords(stepsRecordB);
 
         AggregateRecordsRequest<Long> aggregateRecordsRequest =
                 new AggregateRecordsRequest.Builder<Long>(
                                 new TimeInstantRangeFilter.Builder()
-                                        .setStartTime(getInstantTime("01:00 PM"))
-                                        .setEndTime(getInstantTime("04:00 PM"))
+                                        .setStartTime(yesterdayAt("13:00"))
+                                        .setEndTime(yesterdayAt("16:00"))
                                         .build())
                         .addAggregationType(STEPS_COUNT_TOTAL)
                         .build();
@@ -960,8 +988,9 @@ public class HealthConnectDeviceTest {
         assertThat(oldResponse.get(STEPS_COUNT_TOTAL)).isEqualTo(2000);
 
         dataOriginPrioOrder =
-                getDataOriginPriorityOrder(
-                        APP_B_WITH_READ_WRITE_PERMS, APP_A_WITH_READ_WRITE_PERMS);
+                getDataOrigins(
+                        APP_B_WITH_READ_WRITE_PERMS.getPackageName(),
+                        APP_A_WITH_READ_WRITE_PERMS.getPackageName());
 
         uiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
         updateDataOriginPriorityOrder(
@@ -993,46 +1022,59 @@ public class HealthConnectDeviceTest {
             throws Exception {
         UiAutomation uiAutomation = InstrumentationRegistry.getInstrumentation().getUiAutomation();
 
-        revokeAndThenGrantHealthPermissions(APP_A_WITH_READ_WRITE_PERMS);
-        revokeAndThenGrantHealthPermissions(APP_B_WITH_READ_WRITE_PERMS);
+        revokeAndThenGrantHealthPermissions(APP_A_WITH_READ_WRITE_PERMS.getPackageName());
+        revokeAndThenGrantHealthPermissions(APP_B_WITH_READ_WRITE_PERMS.getPackageName());
 
         List<DataOrigin> dataOriginPrioOrder =
-                getDataOriginPriorityOrder(
-                        APP_A_WITH_READ_WRITE_PERMS, APP_B_WITH_READ_WRITE_PERMS);
+                getDataOrigins(
+                        APP_A_WITH_READ_WRITE_PERMS.getPackageName(),
+                        APP_B_WITH_READ_WRITE_PERMS.getPackageName());
 
         uiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
         List<String> priorityList =
                 fetchDataOriginsPriorityOrder(HealthDataCategory.ACTIVITY)
                         .getDataOriginsPriorityOrder()
                         .stream()
-                        .map(dataOrigin -> dataOrigin.getPackageName())
-                        .collect(Collectors.toList());
+                        .map(DataOrigin::getPackageName)
+                        .toList();
 
         assertThat(
                         priorityList.equals(
                                 dataOriginPrioOrder.stream()
-                                        .map(dataOrigin -> dataOrigin.getPackageName())
-                                        .collect(Collectors.toList())))
+                                        .map(DataOrigin::getPackageName)
+                                        .toList()))
                 .isTrue();
 
-        Bundle bundle =
-                insertExerciseSessionAs(
-                        APP_A_WITH_READ_WRITE_PERMS,
-                        "01:00 PM",
-                        "03:00 PM",
-                        "02:00 PM",
-                        "03:00 PM");
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
-        bundle =
-                insertExerciseSessionAs(
-                        APP_B_WITH_READ_WRITE_PERMS, "02:00 PM", "03:00 PM", null, null);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        ExerciseSessionRecord sessionRecordA =
+                new ExerciseSessionRecord.Builder(
+                                getEmptyMetadata(),
+                                yesterdayAt("13:00"),
+                                yesterdayAt("15:00"),
+                                EXERCISE_SESSION_TYPE_RUNNING)
+                        .setSegments(
+                                List.of(
+                                        new ExerciseSegment.Builder(
+                                                        yesterdayAt("14:00"),
+                                                        yesterdayAt("15:00"),
+                                                        EXERCISE_SEGMENT_TYPE_PAUSE)
+                                                .build()))
+                        .build();
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(sessionRecordA);
+
+        ExerciseSessionRecord sessionRecordB =
+                new ExerciseSessionRecord.Builder(
+                                getEmptyMetadata(),
+                                yesterdayAt("14:00"),
+                                yesterdayAt("15:00"),
+                                EXERCISE_SESSION_TYPE_RUNNING)
+                        .build();
+        APP_B_WITH_READ_WRITE_PERMS.insertRecords(sessionRecordB);
 
         AggregateRecordsRequest<Long> aggregateRecordsRequest =
                 new AggregateRecordsRequest.Builder<Long>(
                                 new TimeInstantRangeFilter.Builder()
-                                        .setStartTime(getInstantTime("01:00 PM"))
-                                        .setEndTime(getInstantTime("03:00 PM"))
+                                        .setStartTime(yesterdayAt("13:00"))
+                                        .setEndTime(yesterdayAt("15:00"))
                                         .build())
                         .addAggregationType(EXERCISE_DURATION_TOTAL)
                         .build();
@@ -1044,14 +1086,14 @@ public class HealthConnectDeviceTest {
         assertThat(response.get(EXERCISE_DURATION_TOTAL)).isNotNull();
         assertThat(response.get(EXERCISE_DURATION_TOTAL))
                 .isEqualTo(
-                        (getInstantTime("03:00 PM").toEpochMilli()
-                                        - getInstantTime("01:00 PM").toEpochMilli())
-                                - (getInstantTime("03:00 PM").toEpochMilli()
-                                        - getInstantTime("02:00 PM").toEpochMilli()));
+                        Duration.between(yesterdayAt("13:00"), yesterdayAt("15:00"))
+                                .minus(Duration.between(yesterdayAt("14:00"), yesterdayAt("15:00")))
+                                .toMillis());
 
         dataOriginPrioOrder =
-                getDataOriginPriorityOrder(
-                        APP_B_WITH_READ_WRITE_PERMS, APP_A_WITH_READ_WRITE_PERMS);
+                getDataOrigins(
+                        APP_B_WITH_READ_WRITE_PERMS.getPackageName(),
+                        APP_A_WITH_READ_WRITE_PERMS.getPackageName());
 
         uiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
         updateDataOriginPriorityOrder(
@@ -1063,22 +1105,20 @@ public class HealthConnectDeviceTest {
                 fetchDataOriginsPriorityOrder(HealthDataCategory.ACTIVITY)
                         .getDataOriginsPriorityOrder()
                         .stream()
-                        .map(dataOrigin -> dataOrigin.getPackageName())
-                        .collect(Collectors.toList());
+                        .map(DataOrigin::getPackageName)
+                        .toList();
 
         assertThat(
                         priorityList.equals(
                                 dataOriginPrioOrder.stream()
-                                        .map(dataOrigin -> dataOrigin.getPackageName())
-                                        .collect(Collectors.toList())))
+                                        .map(DataOrigin::getPackageName)
+                                        .toList()))
                 .isTrue();
 
         AggregateRecordsResponse<Long> newResponse = getAggregateResponse(aggregateRecordsRequest);
         assertThat(newResponse.get(EXERCISE_DURATION_TOTAL)).isNotNull();
         assertThat(newResponse.get(EXERCISE_DURATION_TOTAL))
-                .isEqualTo(
-                        getInstantTime("03:00 PM").toEpochMilli()
-                                - getInstantTime("01:00 PM").toEpochMilli());
+                .isEqualTo(Duration.between(yesterdayAt("13:00"), yesterdayAt("15:00")).toMillis());
     }
 
     @Test
@@ -1087,61 +1127,95 @@ public class HealthConnectDeviceTest {
         recordClassesToRead.add(HeartRateRecord.class.getName());
         recordClassesToRead.add(StepsRecord.class.getName());
 
-        Bundle bundle =
-                getChangeLogTokenAs(
-                        APP_B_WITH_READ_WRITE_PERMS,
-                        APP_A_WITH_READ_WRITE_PERMS.getPackageName(),
-                        recordClassesToRead);
-        String changeLogTokenForAppB = bundle.getString(CHANGE_LOG_TOKEN);
+        String changeLogTokenForAppB =
+                APP_B_WITH_READ_WRITE_PERMS.getChangeLogToken(
+                        new ChangeLogTokenRequest.Builder()
+                                .addDataOriginFilter(
+                                        getDataOrigin(APP_A_WITH_READ_WRITE_PERMS.getPackageName()))
+                                .addRecordType(HeartRateRecord.class)
+                                .addRecordType(StepsRecord.class)
+                                .build());
 
-        bundle = insertRecordAs(APP_A_WITH_READ_WRITE_PERMS);
-        assertThat(bundle.getBoolean(SUCCESS)).isTrue();
+        APP_A_WITH_READ_WRITE_PERMS.insertRecords(TEST_RECORDS);
 
         List<String> healthPerms =
                 getGrantedHealthPermissions(APP_B_WITH_READ_WRITE_PERMS.getPackageName());
 
         revokeHealthPermissions(APP_B_WITH_READ_WRITE_PERMS.getPackageName());
 
-        try {
-            readChangeLogsUsingDataOriginFiltersAs(
-                    APP_B_WITH_READ_WRITE_PERMS, changeLogTokenForAppB);
-            Assert.fail(
-                    "Should have thrown exception in reading changeLogs without read permissions!");
-        } catch (HealthConnectException e) {
-            assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
-        }
+        HealthConnectException e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () ->
+                                APP_B_WITH_READ_WRITE_PERMS.getChangeLogs(
+                                        new ChangeLogsRequest.Builder(changeLogTokenForAppB)
+                                                .build()));
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
 
-        try {
-            getChangeLogTokenAs(
-                    APP_B_WITH_READ_WRITE_PERMS,
-                    APP_A_WITH_READ_WRITE_PERMS.getPackageName(),
-                    recordClassesToRead);
-            Assert.fail(
-                    "Should have thrown exception in getting change log token without read "
-                            + "permission!");
-        } catch (HealthConnectException e) {
-            assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
-        }
+        e =
+                assertThrows(
+                        HealthConnectException.class,
+                        () ->
+                                APP_B_WITH_READ_WRITE_PERMS.getChangeLogToken(
+                                        new ChangeLogTokenRequest.Builder()
+                                                .addRecordType(HeartRateRecord.class)
+                                                .addRecordType(StepsRecord.class)
+                                                .addDataOriginFilter(
+                                                        getDataOrigin(
+                                                                APP_A_WITH_READ_WRITE_PERMS
+                                                                        .getPackageName()))
+                                                .build()));
+        assertThat(e.getErrorCode()).isEqualTo(HealthConnectException.ERROR_SECURITY);
 
         for (String perm : healthPerms) {
             grantPermission(APP_B_WITH_READ_WRITE_PERMS.getPackageName(), perm);
         }
     }
 
+    private static Pair<Class<? extends Record>, String> insertRecord(
+            TestAppProxy testAppProxy, Record record) throws Exception {
+        return new Pair<>(record.getClass(), testAppProxy.insertRecord(record));
+    }
+
     private static StepsRecord getStepsRecord(
             int stepCount, Instant startTime, int durationInHours, String clientId) {
         return new StepsRecord.Builder(
-                        new Metadata.Builder()
-                                .setDataOrigin(
-                                        new DataOrigin.Builder()
-                                                .setPackageName(
-                                                        APP_WITH_WRITE_PERMS_ONLY.getPackageName())
-                                                .build())
-                                .setClientRecordId(clientId)
-                                .build(),
+                        getMetadataForClientId(
+                                clientId,
+                                getDataOrigin(APP_WITH_WRITE_PERMS_ONLY.getPackageName())),
                         startTime,
                         startTime.plus(durationInHours, ChronoUnit.HOURS),
                         stepCount)
+                .build();
+    }
+
+    private static StepsRecord getStepsRecord(Metadata metadata) {
+        Instant startTime = NOW.minus(ofMinutes(10));
+        Instant endTime = NOW.minus(ofMinutes(5));
+        return new StepsRecord.Builder(metadata, startTime, endTime, 155).build();
+    }
+
+    private static HeartRateRecord getHeartRateRecord(Metadata metadata) {
+        Instant startTime = NOW.minus(ofMinutes(10));
+        Instant endTime = NOW.minus(ofMinutes(5));
+        return new HeartRateRecord.Builder(
+                        metadata,
+                        startTime,
+                        endTime,
+                        List.of(new HeartRateRecord.HeartRateSample(75, startTime.plusSeconds(5))))
+                .build();
+    }
+
+    private static BasalMetabolicRateRecord getBasalMetabolicRateRecord(Metadata metadata) {
+        Instant time = NOW.minus(ofMinutes(10));
+        return new BasalMetabolicRateRecord.Builder(metadata, time, Power.fromWatts(10)).build();
+    }
+
+    private static ExerciseSessionRecord getExerciseSessionRecord(Metadata metadata) {
+        Instant startTime = NOW.minus(ofMinutes(10));
+        Instant endTime = NOW.minus(ofMinutes(5));
+        return new ExerciseSessionRecord.Builder(
+                        metadata, startTime, endTime, EXERCISE_SESSION_TYPE_RUNNING)
                 .build();
     }
 }
